Updated LLM, and config management

--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,11 @@ UNITY_CATALOG_URL=
 UNITY_CATALOG_TOKEN= 
 UNITYCATALOG_LOG= "debug"
 
-MLFLOW_TRACKING_URI= 
+MLFLOW_TRACKING_URI= "http:localhost:3000"
+MLFLOW_DEPLOYMENTS_CONFIG="/api/config/models/model.yaml"
+MLFLOW_DEPLOYMENTS_HOST=
+MLFLOW_DEPLOYMENTS_PORT=
+MLFLOW_DEPLOYMENTS_SERVER=
 
 RAY_RUNNER_HEAD= 
 
@@ -20,11 +24,7 @@ REDIS_PORT=
 
 # Model API Keys
 OPENAI_API_KEY=""
-VERTEX_LOCATION=""
-VERTEX_PROJECT=""
-HUGGINGFACE_API_KEY=""
-ANTHROPIC_API_KEY=""
-
+OPENROUTER_API_KEY=""
 
 
 # OAUTH
