Integrate LiteLLM part 1 of N
adjusted llm completion implementation to integrate with litellm. Transitioned models.yaml from MLFlow deployment server to litellm.

Still using mlflow openai autologging for observibility.

--- a/.env.example
+++ b/.env.example
@@ -1,31 +1,32 @@
-GCP_PROJECT_ID=""
-GCP_SERVICE_ACCT_KEY="./service_account_key.json"
-GOOGLE_APPLICATION_CREDENTIALS="./service_account_key.json"
-
-UNITY_CATALOG_URL= 
-UNITY_CATALOG_TOKEN= 
-UNITYCATALOG_LOG= "debug"
-
-MLFLOW_TRACKING_URI= "http:localhost:3000"
-MLFLOW_DEPLOYMENTS_CONFIG="/api/config/models/model.yaml"
-MLFLOW_DEPLOYMENTS_HOST=
-MLFLOW_DEPLOYMENTS_PORT=
-MLFLOW_DEPLOYMENTS_SERVER=
-
 RAY_RUNNER_HEAD= 
 
-VLLM_API_BASE= 
-VLLM_API_KEY= 
+UNITY_CATALOG_URL= 
+UNITY_CATALOG_TOKEN=
+UNITYCATALOG_LOG="debug"
+
+MLFLOW_TRACKING_SERVER_HOST="localhost"
+MLFLOW_TRACKING_SERVER_PORT="3000"
+MLFLOW_TRACKING_URI= "http//:$MLFLOW_TRACKING_SERVER_HOST:$MLFLOW_TRACKING_SERVER_PORT"
+
+MLFLOW_DEPLOYMENTS_CONFIG="/api/config/models/models.yaml"
+MLFLOW_DEPLOYMENTS_HOST="localhost"
+MLFLOW_DEPLOYMENTS_PORT="4000"
+MLFLOW_DEPLOYMENTS_SERVER="http:$MLFLOW_TRACKING_SERVER_HOST:$MLFLOW_TRACKING_SERVER_PORT"
+
+
 
 PG_HOST=
 
 REDIS_HOST=
 REDIS_PORT=
+REDIS_PASSWORD=
 
 # Model API Keys
 OPENAI_API_KEY=""
+OPENROUTER_API_BASE="https://openrouter.ai/api/v1"
 OPENROUTER_API_KEY=""
-
+VLLM_API_BASE="http://localhost:5000"
+VLLM_API_KEY= ""
 
 # OAUTH
 GOOGLE_CLIENT_ID=
@@ -33,3 +34,7 @@ GOOGLE_CLIENT_SECRET=
 GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
 GITHUB_TOKEN=""
+
+GCP_PROJECT_ID=""
+GCP_SERVICE_ACCT_KEY="./service_account_key.json"
+GOOGLE_APPLICATION_CREDENTIALS="./service_account_key.json"
